Bug 477503 - "Take a Screenshot of Selection" can't save the screenshot image
Summary: "Take a Screenshot of Selection" can't save the screenshot image
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.75
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-25 15:07 UTC by Enrico
Modified: 2023-11-25 22:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enrico 2023-11-25 15:07:22 UTC
SUMMARY
***
"Take a Screenshot of Selection" opens the screenshot but can't save the image.
***

STEPS TO REPRODUCE
1. Select text
2. Select the "Take a Screenshot of Selection" option
3.  From the screenshot popup select SAVE
4. Select the saving location and save the image

OBSERVED RESULT
The image is not saved

EXPECTED RESULT
The image should be saved


Operating System: KaOS (2023) 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Kernel Version: 6.5.11-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Christoph Cullmann 2023-11-25 16:29:02 UTC
One can reproduce that by using some extension or none at all, then we just silently fail.
Comment 2 Bug Janitor Service 2023-11-25 16:43:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/640
Comment 3 Christoph Cullmann 2023-11-25 22:35:51 UTC
Git commit 430b293cc41951fe0313fc3e40cf5c105c9486dc by Christoph Cullmann.
Committed on 25/11/2023 at 23:25.
Pushed by cullmann into branch 'master'.

check if screenshot saving worked

M  +8    -1    src/view/screenshotdialog.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/430b293cc41951fe0313fc3e40cf5c105c9486dc