check if screenshot saving worked

BUG: 477503